--- a/templates/hotel-booking.html
+++ b/templates/hotel-booking.html
@@ -21,6 +21,7 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/hotel-booking.css">
 </head>
 
 <body>
@@ -72,7 +73,7 @@
             <!-- Hotel Search Box -->
             <div class="booking-search-container">
                 <form id="hotelSearchForm">
-                    <div class="search-form-grid" style="grid-template-columns: 2fr 1fr 1fr 1fr 1fr auto;">
+                    <div class="search-form-grid hotel-search-grid">
                         <div class="form-field">
                             <label>Destination</label>
                             <div class="input-wrapper">
